--- a/self-education.html
+++ b/self-education.html
@@ -62,7 +62,7 @@
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://mathprofi.net" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -73,7 +73,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://www.mathway.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -84,7 +84,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://mathdf.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -95,7 +95,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://www.desmos.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -106,7 +106,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://www.3blue1brown.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -117,7 +117,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://www.wolframalpha.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -133,7 +133,7 @@
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://teach-in.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -144,7 +144,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://cyberleninka.ru/" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -160,7 +160,7 @@
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://yandex.ru/yaintern" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -171,18 +171,18 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://education.yandex.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Яндекс Образование</h4>
-                    <span class="card__description">Это проекты и инициативы для развития компетенций в мире технологий</span>
+                    <span class="card__description">Проекты и инициативы для развития компетенций в мире технологий</span>
                   </div>
                 </a>
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://practicum.yandex.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -193,7 +193,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://education.vk.company" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -204,7 +204,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://education.tbank.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -215,7 +215,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://alfabank.ru/alfafuture" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -226,7 +226,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://vtbcareer.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -237,7 +237,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://sberstudent.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -248,7 +248,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://21-school.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -259,7 +259,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://ozoncamp.pro" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -270,7 +270,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://tech.wildberries.ru/" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -283,7 +283,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://career.t1.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -294,7 +294,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://rshbdigital.ru/" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -308,7 +308,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://stepik.org" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -319,7 +319,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://ru.hexlet.io" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -330,7 +330,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://coderun.yandex.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -341,7 +341,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://leetcode.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -352,7 +352,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://changellenge.com" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -363,7 +363,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://fadm.gov.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -373,7 +373,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://tvoyhod.online" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -383,7 +383,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://mosmolodezh.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -394,7 +394,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://myrosmol.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -405,7 +405,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://rsv.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -415,18 +415,8 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card" href="https://наука.рф" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
-                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Наука РФ</h4>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
                 <a class="card" href="https://cups.online" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -437,7 +427,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://www.хакатоны.рус/" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
