Fix types of some links in "entrance" article

--- a/organizations.html
+++ b/organizations.html
@@ -795,7 +795,7 @@
                 <a class="card card--telegram" href="https://t.me/EnginesAbiturientMAI" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Двигателестроения</h4>
@@ -807,7 +807,7 @@
                 <a class="card card--telegram" href="https://t.me/mai3mn" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Информатика, кибернетика и электроэнергетика</h4>
@@ -819,7 +819,7 @@
                 <a class="card card--telegram" href="https://t.me/frela_4" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Системы связи, радиоэлектроника и информационная безопасность</h4>
@@ -831,7 +831,7 @@
                 <a class="card card--telegram" href="https://t.me/+W6YchX8xltU0ODUy" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Управленческо-экономические направления</h4>
@@ -867,7 +867,7 @@
                 <a class="card card--telegram" href="https://t.me/pk8mai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Компьютерные науки и прикладная математика</h4>
@@ -891,7 +891,7 @@
                 <a class="card card--telegram" href="https://t.me/mai_10_abiturient" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Лингвистические направления</h4>
@@ -903,7 +903,7 @@
                 <a class="card card--telegram" href="https://t.me/+t7Y-9Q55T2gyZGQy" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <span class="card__type">группа</span>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Передовая инженерная школа</h4>
