Fix description for "VTB" link

--- a/self-education.html
+++ b/self-education.html
@@ -231,7 +231,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Карьера в ВТБ</h4>
-                    <span>Устроиться на работу в ведущем банке РФ</span>
+                    <span class="card__description">Устроиться на работу в ведущем банке РФ</span>
                   </div>
                 </a>
               </li>
