Add description for the "tvoyhod" link

--- a/self-education.html
+++ b/self-education.html
@@ -378,6 +378,10 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Твой ход</h4>
+                    <span class="card__description">
+                      Масштабное сообщество ярких, амбициозных и талантливых студентов, 
+                      которых объединяет стремление жить и создавать в России
+                    </span>
                   </div>
                 </a>
               </li>
