--- a/self-education.html
+++ b/self-education.html
@@ -368,6 +368,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Росмолодёжь</h4>
+                    <span class="card__description">Федеральное агентство по делам молодёжи</span>
                   </div>
                 </a>
               </li>
