Fix types and descriptions of some links (#45)
* Fix types of some links in "entrance" article

* Fix description for "VTB" link

* Add description for the "tvoyhod" link

* Add description for the "fadm.gov.ru" link

--- a/self-education.html
+++ b/self-education.html
@@ -231,7 +231,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Карьера в ВТБ</h4>
-                    <span>Устроиться на работу в ведущем банке РФ</span>
+                    <span class="card__description">Устроиться на работу в ведущем банке РФ</span>
                   </div>
                 </a>
               </li>
@@ -368,6 +368,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Росмолодёжь</h4>
+                    <span class="card__description">Федеральное агентство по делам молодёжи</span>
                   </div>
                 </a>
               </li>
@@ -378,6 +379,10 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Твой ход</h4>
+                    <span class="card__description">
+                      Масштабное сообщество ярких, амбициозных и талантливых студентов, 
+                      которых объединяет стремление жить и создавать в России
+                    </span>
                   </div>
                 </a>
               </li>
