--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="about__title">mai_library</h1>
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
-          <a class="link" href="https://mai.ru">МАИ</a>,
+          <a class="link" href="https://mai.ru" target="_blank">МАИ</a>,
           материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
