Add link "mai.ru" into footer

--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -183,7 +183,9 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
+        Сервис не является официальным ресурсом 
+        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
