Add necessary [target="_blank"], fix styles of text-links (#46)
* Add [target="_blank"] for link in index description

* Add [target="_blank"] for links in "money" manual

* Add link "mai.ru" into footer

* Fix work of all text-links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="about__title">mai_library</h1>
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
-          <a class="link" href="https://mai.ru">МАИ</a>,
+          <a class="link" href="https://mai.ru" target="_blank">МАИ</a>,
           материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
@@ -125,7 +125,9 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
+        Сервис не является официальным ресурсом 
+        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
