--- a/manuals/money.html
+++ b/manuals/money.html
@@ -45,9 +45,24 @@
             <div>
               <h3>Ресурсы</h3>
               <ul>
-                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Подробно (1)</a></li>
-                <li><a class="link" href="https://mai.ru/sveden/grants">Подробно (2)</a></li>
-                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Подробно (3)</a></li>
+                <li>
+                  <a class="link" href="https://mai.ru/education/studies/scholarship" target="_blank">
+                    Подробно (1)
+                  </a>
+                </li>
+                <li>
+                  <a class="link" href="https://mai.ru/sveden/grants" target="_blank">
+                    Подробно (2)
+                  </a>
+                </li>
+                <li>
+                  <a 
+                    class="link" target="_blank"
+                    href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty"
+                  >
+                    Подробно (3)
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="table-wrapper">
@@ -124,7 +139,7 @@
                   в квартал на карты платёжной системы "МИР".
                 </li>
                 <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
-                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare" target="_blank">Подробно</a></li>
               </ul>
             </div>
             <div>
@@ -133,16 +148,20 @@
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
                 <li>Размер выплаты зависит от категории, выплачивается 1 раз в семестр.</li>
                 <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
-                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare" target="_blank">Подробно</a></li>
               </ul>
             </div>
             <div>
               <h3>3️⃣ Членам Профсоюза</h3>
               <ul>
-                <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
-                <li>Сумма выплаты зависит от категории. </li>
+                <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства.</li>
+                <li>Сумма выплаты зависит от категории.</li>
                 <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
-                <li><a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">Подробно</a></li>
+                <li>
+                  <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch" target="_blank">
+                    Подробно
+                  </a>
+                </li>
               </ul>
             </div>
             <div>
@@ -211,7 +230,9 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
+        Сервис не является официальным ресурсом 
+        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
