Fix content in "union" manual

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -50,7 +50,7 @@
               <li>Возможность участвовать в выездных мероприятиях и получать призы</li>
               <li>Право на получение индивидуальной материальной поддержки как члену Профсоюза</li>
               <li>Участие в программе лояльности Profcards</li>
-              <li>Возможность стать активистом или сотрудником Профбюро или Профкома</li>
+              <li>Возможность стать активистом или членом Профбюро или Профкома</li>
               <li>Поддержка талантов Профкомом</li>
               <li>Приобретение новых знакомств и личностное развитие</li>
             </ul>
