Fix description of project in "index" page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
           <a class="link" href="https://mai.ru" target="_blank">МАИ</a>,
-          материалов для самообразования и справочников по различным вопросам.
+          материалов для самообразования и статей на различные темы.
         </p>
       </section>
       <section class="catalog-group">
