Fix content in "union" manual

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -79,13 +79,13 @@
           <h2 class="manual-part__title">Алгоритм вступления в Профсоюз</h2>
           <div class="manual-part__content">
             <ol>
-              <li>Получить у сотрудника Профбюро бланк заявления о вступлении в Профсоюз.</li>
+              <li>Получить у члена Профбюро бланк заявления о вступлении в Профсоюз.</li>
               <li>Заполнить бланк заявления о вступлении в Профсоюз.</li>
-              <li>Сдать сотруднику Профбюро бланк заявления о вступлении в Профсоюз.</li>
+              <li>Сдать члену Профбюро бланк заявления о вступлении в Профсоюз.</li>
               <li>Оплатить профвзнос (8 рублей для получающих и 48 рублей для не получающих стипендию).</li>
-              <li>Получить у сотрудника Профбюро ссылку на гугл-форму.</li>
+              <li>Получить у члена Профбюро ссылку на гугл-форму.</li>
               <li>Заполнить-гугл форму (нужна для учёта членов Профсоюза и ведения статистики).</li>
-              <li>Получить электронный профсоюзный билет (его производство занимает некоторое время, поэтому как только карточка окажется у сотрудников Профбюро, они свяжутся с Вами).</li>
+              <li>Получить электронный профсоюзный билет (его производство занимает некоторое время, поэтому как только карточка окажется у членов Профбюро, они свяжутся с Вами).</li>
             </ol>
             <p>Студент считается членом Профсоюза с момента написания заявления о вступлении в Профсоюз и оплаты профвзноса.</p>
           </div>
@@ -95,9 +95,9 @@
           <div class="manual-part__content">
             <ol>
               <li>Нужно иметь продлённый билет. При вступлении в Профсоюз вы обязуетесь уплачивать профвзносы, даже если Вы не пользуетесь предоставленными Вам возможностями.</li>
-              <li>Получить у сотрудника Профбюро бланк заявления о выходе из Профсоюза.</li>
+              <li>Получить у члена Профбюро бланк заявления о выходе из Профсоюза.</li>
               <li>Заполнить бланк заявления о выходе из Профсоюза.</li>
-              <li>Сдать сотруднику Профбюро бланк заявления о выходе из Профсоюза.</li>
+              <li>Сдать члену Профбюро бланк заявления о выходе из Профсоюза.</li>
             </ol>
             <p>При выходе из Профсоюза обратное вступление возможно только через 18 месяцев.</p>
           </div>
@@ -119,8 +119,8 @@
                 Своевременное продление профбилетов студентов группы: 
                 сбор профвзносов, заполнение ведомости, учёт студентов, получающих и не получающих стипендию
               </li>
-              <li>Передача информации от группы сотрудникам Профбюро</li>
-              <li>Передача информации от сотрудников Профбюро студентам группы</li>
+              <li>Передача информации от группы членам Профбюро</li>
+              <li>Передача информации от членов Профбюро студентам группы</li>
             </ul>
           </div>
         </article>
