Add keywords to main page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta
+      name="keywords"
+      content="МАИ, Московский авиационный институт, сборник материалов для маёвца, справочник МАИ, ресурсы МАИ"
+    />
     <meta name="author" content="iannsgirdye"/>
     <meta name="yandex-verification" content="541bc5fe2dfb0bfd"/>
     <title>mai_library — сборник материалов для маёвца</title>
