Add description to main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="keywords"
       content="МАИ, Московский авиационный институт, сборник материалов для маёвца, справочник МАИ, ресурсы МАИ"
     />
+    <meta
+      name="description"
+      content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"
+    />
     <meta name="author" content="iannsgirdye"/>
     <meta name="yandex-verification" content="541bc5fe2dfb0bfd"/>
     <title>mai_library — сборник материалов для маёвца</title>
