--- a/self-education.html
+++ b/self-education.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta
+      name="description"
+      content="Материалы для самостоятельной подготовки в МАИ"
+    />
     <meta name="author" content="iannsgirdye"/>
     <title>Самообразование | mai_library — сборник материалов для маёвца</title>
     <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
