--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta
+      name="keywords"
+      content="МАИ, Московский авиационный институт, сборник материалов для маёвца, справочник МАИ, ресурсы МАИ"
+    />
+    <meta
+      name="description"
+      content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"
+    />
+    <meta name="author" content="iannsgirdye"/>
+    <meta name="yandex-verification" content="541bc5fe2dfb0bfd"/>
+    <meta property="og:site_name" content="mai_library"/>
+    <meta property="og:locale" content="ru_RU"/>
+    <meta property="og:title" content="mai_library — сборник материалов для маёвца"/>
+    <meta property="og:description" content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"/>
+    <meta property="og:image" content="https://mai-library.ru/open-graph.jpg"/>
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image:width" content="1080"/>
+    <meta property="og:image:height" content="1080"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://mai-library.ru"/>
     <title>mai_library — сборник материалов для маёвца</title>
     <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./normalize.css"/>
