Add link to "dormitories" manual

--- a/manuals.html
+++ b/manuals.html
@@ -47,6 +47,18 @@
         <h2 class="catalog-group__title">Все статьи</h2>
         <nav class="catalog-group__content">
           <ul class="catalog-group__list">
+            <li class="menu__content-item">
+              <a
+                class="card card--menu" target="_blank"
+                href="https://carbonated-mimosa-298.notion.site/54695b22f13440f3b3eda7e292744e04#52c7fecd4b6b4d62ada702976fefc3ec"
+              >
+                <img class="card__icon" src="./icons/manuals/dormitories.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Общежития</h2>
+                <p class="card__description">
+                  Подготовка и заселение, терминология и правила, корпуса и туры по ним
+                </p>
+              </a>
+            </li>
             <li class="catalog-group__item">
               <a class="card card--menu" href="./manuals/exams.html">
                 <img class="card__icon" src="./icons/manuals/exams.svg" alt="" width="100" height="100"/>
