--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <meta property="og:title" content="mai_library — сборник материалов для маёвца"/>
     <meta property="og:description" content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"/>
     <meta property="og:image" content="https://mai-library.ru/open-graph.jpg"/>
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image:width" content="1080"/>
-    <meta property="og:image:height" content="1080"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://mai-library.ru"/>
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:title" content="mai_library — сборник материалов для маёвца"/>
+    <meta property="twitter:description" content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"/>
+    <meta property="twitter:image" content="https://mai-library.ru/open-graph.jpg"/>
     <title>mai_library — сборник материалов для маёвца</title>
     <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./normalize.css"/>
