Add new link to the "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -166,6 +166,20 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/nauka_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Наука [НИРС, СНО, аспиранты]</h4>
+                    <span class="card__description">
+                      Отдел сопровождения и развития научной деятельности обучающихся и Студенческого научного общества
+                    </span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-something">
