Add new link to the "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -345,6 +345,17 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/alpclbmai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Альпклуб</h4>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-1">
