Add new link to the "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -590,6 +590,16 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="https://www.kaf804.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Кафедра 804</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card" href="https://dep805.ru" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
