--- a/services.html
+++ b/services.html
@@ -144,6 +144,17 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://mai-exler.ru/" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">МАИ.Экслер.ру</h4>
+                    <span class="card__description">Cтуденческая энциклопедия</span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
         </div>
